Modded Nav bar, changed color

--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,15 @@
 .welcome {
 	padding: 40px 15px;
 	text-align: center;
-	background-color: #A3FFFF;
+	background-color: #D1F4FF;
 	font-family: "freight text pro", serif;
 }
 
 body {
-	background-color: #A3FFFF;
+	background-color: #D1F4FF;
 }
 
 .jumbotron {
-	background-color: #A3FFFF;
+	background-color: #D1F4FF;
 }
 
